plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.ssafy'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
}

def querydslDir = "src/main/generated"

sourceSets {
    main.java.srcDir querydslDir
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }
}
tasks.named('compileJava') {
    options.annotationProcessorPath = configurations.annotationProcessor
    doLast {
        sourceSets.main.java.srcDirs += [file(querydslDir)]
    }
}
tasks.withType(JavaCompile){
    options.encoding = 'UTF-8'
}
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.14'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-config
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-config', version: '4.1.0'

    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-aws
    //이미지 처리를 위한 aws-cloud-starter-aws
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.6.RELEASE'
    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bootstrap
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bootstrap', version: '4.1.0'
    // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.2.3'
// https://mvnrepository.com/artifact/org.postgresql/postgresql
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.2'
    // https://mvnrepository.com/artifact/org.springframework.kafka/spring-kafka
    implementation group: 'org.springframework.kafka', name: 'spring-kafka', version: '3.1.2'
    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.5'
    // kakao Oauth 해결을 위한 WebClient
    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.2.3'
    runtimeOnly 'com.h2database:h2'
    //queryDsl
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
    // https://mvnrepository.com/artifact/org.assertj/assertj-core
    //테스트를 위한 assertj import
    testImplementation("org.assertj:assertj-core:3.22.0")
    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '33.1.0-jre'



}

tasks.named('test') {
    useJUnitPlatform()
}